@@ -1,6 +1,7 @@
 ZEsarUX 13.0 - xxx edition. 26 Septiembre 2025
 
 Agregada opción para ordenar automaticámente los iconos en ZX Desktop
+Agregado carga con --tape y --realtape con autocarga de snapshot al inicio
 
 ----
 
